--- a/frontend/aula16/index.html
+++ b/frontend/aula16/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fontes e Cores</title>
+    <title>Fontes e cores</title>
     <style>
         .formatacao {
             color: #0eb426; /*  hexadecimal a mais utilizada*/
