--- a/frontend/aula21/noticia.html
+++ b/frontend/aula21/noticia.html
@@ -14,7 +14,8 @@
             margin-bottom: 10px;
         }
         h2 {
-            margin: 0px
+            margin: 0px;
+            color: #441919;
         }
     </style>
 </head>
