--- a/frontend/projeto03/index.html
+++ b/frontend/projeto03/index.html
@@ -19,5 +19,76 @@
             <a href="eletronicos.html">Eletrônicos</a>
         </div>
     </div>
+
+    <div id="area-principal">
+        <div id="area-postagens">
+            <div class="postagem">
+                <h2>Titulo da postagem 1</h2>
+                <span class="data-postagem">postado em 20 de março 2025</span>
+                <img src="./images/imagem1.jpg">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequuntur eaque doloribus possimus error minus placeat accusamus pariatur repellat inventore, excepturi amet cupiditate, quo exercitationem vitae sit alias illum, neque quia hic nesciunt! Incidunt, recusandae minus nemo vel at molestias? Esse minima facilis magni sit recusandae delectus quia doloremque tenetur.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem">
+                <h2>Titulo da postagem 2</h2>
+                <span class="data-postagem">postado em 20 de março 2025</span>
+                <img src="./images/imagem2.jpg">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequuntur eaque doloribus possimus error minus placeat accusamus pariatur repellat inventore, excepturi amet cupiditate, quo exercitationem vitae sit alias illum, neque quia hic nesciunt! Incidunt, recusandae minus nemo vel at molestias? Esse minima facilis magni sit recusandae delectus quia doloremque tenetur.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem">
+                <h2>Titulo da postagem 3</h2>
+                <span class="data-postagem">postado em 20 de março 2025</span>
+                <img src="./images/imagem3.jpg">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequuntur eaque doloribus possimus error minus placeat accusamus pariatur repellat inventore, excepturi amet cupiditate, quo exercitationem vitae sit alias illum, neque quia hic nesciunt! Incidunt, recusandae minus nemo vel at molestias? Esse minima facilis magni sit recusandae delectus quia doloremque tenetur.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem">
+                <h2>Titulo da postagem 4</h2>
+                <span class="data-postagem">postado em 20 de março 2025</span>
+                <img src="./images/imagem4.jpg">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequuntur eaque doloribus possimus error minus placeat accusamus pariatur repellat inventore, excepturi amet cupiditate, quo exercitationem vitae sit alias illum, neque quia hic nesciunt! Incidunt, recusandae minus nemo vel at molestias? Esse minima facilis magni sit recusandae delectus quia doloremque tenetur.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem">
+                <h2>Titulo da postagem 5</h2>
+                <span class="data-postagem">postado em 20 de março 2025</span>
+                <img src="./images/imagem5.jpg">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequuntur eaque doloribus possimus error minus placeat accusamus pariatur repellat inventore, excepturi amet cupiditate, quo exercitationem vitae sit alias illum, neque quia hic nesciunt! Incidunt, recusandae minus nemo vel at molestias? Esse minima facilis magni sit recusandae delectus quia doloremque tenetur.</p>
+                <a href="#">Leia mais</a>
+            </div>
+        </div>
+
+        <div id="area-lateral">
+            <div class="conteudo-lateral">
+                <h3>Postagens recentes</h3>
+                <div class="postagem-lateral">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, fuga!</p>
+                    <a href="#">Leia mais</a>
+                </div>
+
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, fuga!</p>
+                    <a href="#">Leia mais</a>
+                </div>
+            </div>
+
+             <div class="conteudo-lateral">
+                <h3>Categorias</h3>
+                <a href="">Jogos</a> <br>
+                <a href="">Celulares</a> <br>
+                <a href="">Informática</a> <br>
+                <a href="">Eletrônicos</a> <br>
+            </div>
+        </div>
+
+        <div id="rodape">
+            Todos os direitos reservados
+        </div>
+    </div>
 </body>
 </html>
